// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonWeb Can be set button shape 1`] = `
<div>
  <button
    class="ant-btn ant-btn-circle ant-btn-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Disabled state of button 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Make background transparent and invert text and border colors 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-background-ghost"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Option to fit button width to its parent width 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-block"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Redirect url of link button 1`] = `
<div>
  <a
    class="ant-btn ant-btn-link"
    href="#"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </a>
</div>
`;

exports[`ButtonWeb Set the danger status of button 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-dangerous"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Set the loading status of button 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-loading"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Set the size of button 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb Set the type of button 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb compact dialog used for asking for user confirmation 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb modal dialog used for asking for user confirmation 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`ButtonWeb renders default buttons 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="glyphicon rating-icon rating-icon-empty icon-class"
    />
    <span>
      Button
    </span>
  </button>
</div>
`;
